ci: Update GitLab CI configuration file with new base security report template.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,7 @@
 include:
 - project: zuso-rd-team/gitlab-ci-templates
   file:
-  - sec-report.yml
+  - base-sec-report.yml
   - common.yml
 
 unit-test:
