ci: standard workflow job name and add test summary
Rename the CI job from "build" to "Test" and add a Test Summary
step that uploads the gotestsum junit report to the test-summary/action.
This makes the workflow more explicit about its purpose and ensures
test results are collected and displayed regardless of job outcome
(by running the summary step with 'if: always()').

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,7 +6,7 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build:
+  Test:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout code
@@ -19,3 +19,9 @@ jobs:
 
     - name: Test
       run: go run gotest.tools/gotestsum@latest --junitfile report.xml --format testname
+    
+    - name: Test Summary
+      uses: test-summary/action@v2
+      with:
+        paths: "report.xml"
+      if: always()
