chore(ci): emit test summary as markdown
Update the GitHub Actions test workflow to write the test
summary output as a markdown file (test-summary.md) in addition
to the existing XML report. This makes it easier to surface
readable test results in PRs and artifacts, and supports any
consumers that prefer human-readable summaries.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,4 +24,5 @@ jobs:
       uses: test-summary/action@v2
       with:
         paths: "report.xml"
+        output: test-summary.md
       if: always()
