ci: limit workflow triggers to main and show all results
Update the Test GitHub Actions workflow to only run on pushes
to the main branch and enable showing all test output in the
artifact step.

Why:
- Restricting push triggers prevents CI from running on every
  branch, reducing unnecessary runs and resource usage.
- Enabling "show: all" ensures the full test output is included
  in the generated test summary, improving visibility for
  troubleshooting and continuous integration debugging.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,7 +1,7 @@
 name: Test
 on:
   push:
-    branches: [ "*" ]
+    branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
 
@@ -25,4 +25,5 @@ jobs:
       with:
         paths: "report.xml"
         output: test-summary.md
+        show: "all"
       if: always()
