chore(ci): rename gotestsum output and use pkgname format
Update GitHub Actions workflow to change gotestsum's JUnit output
filename from report.xml to unit-tests.xml and switch the output
format from testname to pkgname. Also update the Test Summary step to
consume unit-tests.xml.

This clarifies the artifact name to reflect unit test results and
groups results by package for more meaningful summaries in the test
reporting action.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,12 +18,12 @@ jobs:
         go-version: '1.24'
 
     - name: Test
-      run: go run gotest.tools/gotestsum@latest --junitfile report.xml --format testname
+      run: go run gotest.tools/gotestsum@latest --junitfile unit-tests.xml --format pkgname
     
     - name: Test Summary
       uses: test-summary/action@v2
       with:
-        paths: "report.xml"
+        paths: "unit-tests.xml"
         output: test-summary.md
         show: "all"
       if: always()
