chore(ci): switch to gotestsum json output and new reporter
Update the GitHub Actions test workflow to emit JSON test results
and use the dorny/test-reporter action.

- Change gotestsum invocation to write --jsonfile go-test.json and use
  --format testname to produce machine-readable Go test output.
- Replace test-summary/action with dorny/test-reporter@v2 and map inputs
  to the new action: name, path, reporter, and report-title.
- Adjust step names and parameters to produce a consolidated "Go Test
  Results" report.

This enables better integration with the chosen reporter and a more
consistent, structured test artifact for downstream processing.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,12 +18,12 @@ jobs:
         go-version: '1.24'
 
     - name: Test
-      run: go run gotest.tools/gotestsum@latest --junitfile unit-tests.xml --format pkgname
+      run: go run gotest.tools/gotestsum@latest --jsonfile go-test.json --format testname
     
     - name: Test Summary
-      uses: test-summary/action@v2.3
+      uses: dorny/test-reporter@v2
       with:
-        paths: "unit-tests.xml"
-        output: test-summary.md
-        show: "all"
-      if: always()
+        name: test-results
+        path: go-test.json
+        reporter: "golang-json"
+        report-title: 'Go Test Results'
