--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,7 +4,10 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
-
+permissions:
+  contents: read
+  actions: read
+  checks: write
 jobs:
   Test:
     runs-on: ubuntu-latest
@@ -22,6 +25,7 @@ jobs:
     
     - name: Test Summary
       uses: dorny/test-reporter@v2
+      if: ${{ !cancelled() }}
       with:
         name: test-results
         path: go-test.json
