--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,9 +1,11 @@
 name: Test
 on:
   push:
-    branches: [ "main" ]
+    branches:
+      - main
   pull_request:
-    branches: [ "main" ]
+    branches:
+      - main
 jobs:
   Test:
     runs-on: ubuntu-latest
@@ -14,7 +16,7 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v5
       with:
-        go-version: '1.24'
+        go-version: "1.24"
 
     - name: Test
       run: go run gotest.tools/gotestsum@latest --jsonfile go-test.json --format testname
