chore(go): bump Go to 1.25 and update CI configs
Add Go 1.25 across module and CI workflows and tidy related CI files.
- Update go.mod to require go 1.25 so builds use the newer toolchain.
- Update GitHub Actions setups (golangci-lint and test workflows) to use
  actions/setup-go@v5 with go-version 1.25 to keep runner Go version in
  sync with the module.
- Update golangci-lint workflow and test workflow to remove stray blank
  lines and ensure steps are properly ordered.
- Add common test tooling words to VSCode cSpell settings for local dev
  (dorny, golangci, gomod, gotest, gotestsum, jsonfile, ncipollo,
  testname) to reduce editor spelling noise.

These changes ensure CI and local development use a consistent Go version
and improve developer experience by reducing spurious linter/typo noise.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,13 @@
 {
     "cSpell.words": [
-        "dotenv"
+        "dorny",
+        "dotenv",
+        "golangci",
+        "gomod",
+        "gotest",
+        "gotestsum",
+        "jsonfile",
+        "ncipollo",
+        "testname"
     ]
 }
