(ci): add auto-tagging workflow update editor settings
Add a GitHub Actions workflow (./workflows/tag.yaml) that auto
releases on pushes to main. The workflow reads a VERSION file (falls back
to 0.0.0 if missing), exposes the version as an output, and creates a
tag prefixed with "v" using the mathieudutour/github-tag-action when the
version is not 0.0.0. This enables automated, consistent tagging for
release automation.

Update VS Code workspace settings (.vscode/settings.json) to add and
reorder extensions: include "mathieudutour" and "WyriHaximus" and adjust
commas for valid JSON. This keeps editor tooling consistent with the new
CI workflow and developer preferences.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,9 @@
         "gotest",
         "gotestsum",
         "jsonfile",
+        "mathieudutour",
         "ncipollo",
-        "testname"
+        "testname",
+        "WyriHaximus"
     ]
 }
