--- a/.github/workflows/tag.yaml
+++ b/.github/workflows/tag.yaml
@@ -35,8 +35,16 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v5
       - name: Push tag
+        id: tag_version
         uses: mathieudutour/github-tag-action@v6.2
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           tag_prefix: "v"
           custom_tag: ${{ needs.version.outputs.version }}
+      - uses: ncipollo/release-action@v1
+        with:
+          generateReleaseNotes: true
+          skipIfReleaseExists: true
+          tag: ${{ steps.tag_version.outputs.new_tag }}
+          name: Release ${{ steps.tag_version.outputs.new_tag }}
+          body: ${{ steps.tag_version.outputs.changelog }}
